<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_example_msgs</name>
	<version>0.0.1</version>
  <description>Test messages for performance test</description>
  <maintainer email="Barry.Xu@sony.com">Barry Xu</maintainer>
  <license>Apache License 2.0</license>
  <author>Barry Xu</author>
  <author email="Barry.Xu@sony.com">Barry Xu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
